Fix disabled collapse items styling

--- a/app/assets/stylesheets/externals/antd-dark.less
+++ b/app/assets/stylesheets/externals/antd-dark.less
@@ -106,6 +106,10 @@
     color: #fff;
   }
 
+  .ant-collapse > .ant-collapse-item.ant-collapse-item-disabled > .ant-collapse-header {
+    color: rgba(255, 255, 255, 0.3);
+  }
+
   // Fix progress bar status icon on the next line.
   .ant-progress-show-info .ant-progress-outer {
     margin-right: calc(-2em - 8px);
